# squid

./: .gitignore  Cargo.toml  PROTOCOL.md  README.md  example.blueprint.toml  example.squid.toml  squid.puml
api/python/: README.md  pyproject.toml  requirements.txt
api/python/src/squid/: __init__.py
broker/: Cargo.toml
broker/src/: blueprint.rs  main.rs  util.rs
broker/src/ga/: agent.rs  genome.rs  mod.rs  population.rs
cli/: Cargo.toml
cli/src/: logger.rs  main.rs  template.rs  tui.rs  viz.rs
cli/templates/: Dockerfile  blueprint.toml  template.env
cli/templates/simulation/: main.py
manager/: Cargo.toml
manager/src/: docker.rs  main.rs
node/: Cargo.toml
node/src/: main.rs
shared/: Cargo.toml
shared/src/: docker.rs  lib.rs
src/: lib.rs  main.rs
src/broker/: broker.rs  experiment.rs  mod.rs  util.rs
src/broker/ga/: agent.rs  genome.rs  mod.rs  population.rs  selector.rs
src/client/: client.rs  exp_manager.rs  logger.rs  mod.rs  tui.rs
src/node/: mod.rs  node.rs  spawn_manager.rs
src/util/: blueprint.rs  docker.rs  mod.rs  stdout_buffer.rs  zft.rs
templates/: Dockerfile  template.gitignore
templates/simulation/: main.py
tests/: zft.rs
worker/: Cargo.toml
worker/python/: README.md  pyproject.toml
worker/python/src/squid/: __init__.py  core.py  util.py
worker/python/src/squid/ros/: __init__.py  core.py
worker/src/: main.rs
