[package]
name = "squid"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
bincode.workspace = true
chrono = { version = "0.4.38", default-features = false, features = ["clock", "std"] }
clap.workspace = true
crossterm = "0.28.1"
csv = "1.3.1"
log.workspace = true
rand.workspace = true
ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }
serde_json.workspace = true
shared.workspace = true
toml.workspace = true
zmq.workspace = true
